Bug 44825 - [4.6 regression] Failed to bootstrap
Summary: [4.6 regression] Failed to bootstrap
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
: 44829 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-05 16:11 UTC by H.J. Lu
Modified: 2010-07-06 10:25 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-07-05 16:11:32 UTC
On Linux/ia32, revision 161840 gave:

../../src-trunk/gcc/java/class.c: In function 'make_class_data':
../../src-trunk/gcc/java/class.c:1923:3: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
../../src-trunk/gcc/java/class.c:1925:3: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
Comment 1 H.J. Lu 2010-07-05 16:13:14 UTC
It may be caused by revision 161839:

http://gcc.gnu.org/ml/gcc-cvs/2010-07/msg00193.html
Comment 2 froydnj@codesourcery.com 2010-07-05 17:45:00 UTC
Subject: Re:  [4.6 regression] Failed to bootstrap

I do not see this compilation failure on my x86-64 linux machine.
Comment 3 Jakub Jelinek 2010-07-05 18:00:48 UTC
You need 32-bit HWI host to reproduce.
Comment 4 H.J. Lu 2010-07-05 18:01:47 UTC
(In reply to comment #2)
> Subject: Re:  [4.6 regression] Failed to bootstrap
> 
> I do not see this compilation failure on my x86-64 linux machine.
> 

It is Linux/ia32 only. You can use

# CC="gcc -m32" CXX="g++ -m32" ../src-trunk/configure i686-linux

to buid Linux/ia32 gcc on Linux/x86-64.
Comment 5 Nathan Froyd 2010-07-05 22:19:36 UTC
Subject: Bug 44825

Author: froydnj
Date: Mon Jul  5 22:19:22 2010
New Revision: 161856

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=161856
Log:
	PR bootstrap/44825
	* class.c (make_class_data): Cast result of VEC_length calls to int.

Modified:
    trunk/gcc/java/ChangeLog
    trunk/gcc/java/class.c

Comment 6 Jorn Wolfgang Rennecke 2010-07-05 23:15:38 UTC
*** Bug 44829 has been marked as a duplicate of this bug. ***
Comment 7 Richard Biener 2010-07-06 10:25:43 UTC
Fixed.