re PR bootstrap/44825 (Failed to bootstrap)

PR bootstrap/44825
	* class.c (make_class_data): Cast result of VEC_length calls to int.

From-SVN: r161856